src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Agent_Firm__c</fullName>
        <label>Agent Firm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WME</fullName>
                </value>
                <value>
                    <fullName>ICM</fullName>
                </value>
                <value>
                    <fullName>UTA</fullName>
                </value>
                <value>
                    <fullName>CAA</fullName>
                </value>
                <value>
                    <fullName>Paradigm</fullName>
                </value>
                <value>
                    <fullName>Wasserman</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Agent_Firm__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anniversary__c</fullName>
        <label>Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attorney</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Primary Attorney For</relationshipLabel>
        <relationshipName>PrimaryAttorney</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bio__c</fullName>
        <label>Bio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Assistant_Email__c</fullName>
        <label>Business Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Assistant_Name__c</fullName>
        <label>Business Assistant Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Assistant_Phone__c</fullName>
        <label>Business Assistant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CPA_Firm__c</fullName>
        <label>CPA Firm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPA_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPA Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CPA For</relationshipLabel>
        <relationshipName>CPAName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_1__c</fullName>
        <label>Category #1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100 Most Powerful</fullName>
                </value>
                <value>
                    <fullName>50 Richest</fullName>
                </value>
                <value>
                    <fullName>Forbes 500</fullName>
                </value>
                <value>
                    <fullName>Hedge Fund</fullName>
                </value>
                <value>
                    <fullName>AMSTAT</fullName>
                </value>
                <value>
                    <fullName>IPO</fullName>
                </value>
                <value>
                    <fullName>Company Sale</fullName>
                </value>
                <value>
                    <fullName>Stock Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_2__c</fullName>
        <label>Category #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100 Most Powerful</fullName>
                </value>
                <value>
                    <fullName>50 Richest</fullName>
                </value>
                <value>
                    <fullName>Forbes 500</fullName>
                </value>
                <value>
                    <fullName>Hedge Fund</fullName>
                </value>
                <value>
                    <fullName>AMSTAT</fullName>
                </value>
                <value>
                    <fullName>IPO</fullName>
                </value>
                <value>
                    <fullName>Company Sale</fullName>
                </value>
                <value>
                    <fullName>Stock Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_3__c</fullName>
        <label>Category #3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100 Most Powerful</fullName>
                </value>
                <value>
                    <fullName>50 Richest</fullName>
                </value>
                <value>
                    <fullName>Forbes 500</fullName>
                </value>
                <value>
                    <fullName>Hedge Fund</fullName>
                </value>
                <value>
                    <fullName>AMSTAT</fullName>
                </value>
                <value>
                    <fullName>IPO</fullName>
                </value>
                <value>
                    <fullName>Company Sale</fullName>
                </value>
                <value>
                    <fullName>Stock Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charity__c</fullName>
        <label>Charity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ARDI__c</fullName>
        <label>Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AR__c</fullName>
        <label>Address Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ATZ__c</fullName>
        <label>Address Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AV__c</fullName>
        <label>Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__LES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lead Email Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <label>Company Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_State__c</fullName>
        <label>Company State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Street__c</fullName>
        <label>Company Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Zip__c</fullName>
        <label>Company Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Email #2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FSTR__Auto_Close_Steps_Not_Created__c</fullName>
        <inlineHelpText>This field is automatically updated by the Auto Close page with how many steps are being skipped by the auto close action.</inlineHelpText>
        <label>Auto Close - Steps Not Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Auto_Close__c</fullName>
        <label>Auto Close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_Date__c</fullName>
        <label>Process Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Definition__c</fullName>
        <label>Definition</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Group</label>
        <referenceTo>FSTR__Process_Group__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Initiated__c</fullName>
        <label>Process Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Recurring_Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Lead was created from a Recurring Business Process record this field links back to that record.</inlineHelpText>
        <label>Recurring Business Process</label>
        <referenceTo>FSTR__Recurring_Business_Process__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Skipped_Steps__c</fullName>
        <label>Skipped Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__pce_definition_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Definition that this object is executing on currently.</description>
        <inlineHelpText>Link to the Definition that this object is executing on currently.</inlineHelpText>
        <label>Definition</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fantasy_Sports_Fan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantasy Sports Fan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Favorite_College_Basketball_Team__c</fullName>
        <label>Favorite College Basketball Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favorite_College_Football_Team__c</fullName>
        <label>Favorite College Football Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favorite_MLB_Team__c</fullName>
        <label>Favorite MLB Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favorite_NBA_Team__c</fullName>
        <label>Favorite NBA Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favorite_NFL_Team__c</fullName>
        <label>Favorite NFL Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favorite_NHL_Team__c</fullName>
        <label>Favorite NHL Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fraction_Aircraft_Owned__c</fullName>
        <label>Fraction Aircraft Owned</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fraction_Date_Purchased__c</fullName>
        <label>Fraction Date Purchased</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fraction_Expiration_Date__c</fullName>
        <label>Fraction Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fraction_Percent_Owned__c</fullName>
        <label>Fraction Percent Owned</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Graduate__c</fullName>
        <label>Graduate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_2_City__c</fullName>
        <label>Home #2 City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_2_State__c</fullName>
        <label>Home #2 State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_2_Street_Address__c</fullName>
        <label>Home #2 Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_2_Zip_Code__c</fullName>
        <label>Home #2 Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_3_City__c</fullName>
        <label>Home #3 City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_3_State__c</fullName>
        <label>Home #3 State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_3_Street_Address__c</fullName>
        <label>Home #3 Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_3_Zip_Code__c</fullName>
        <label>Home #3 Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_2_Phone__c</fullName>
        <label>House #2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>House_3_Phone__c</fullName>
        <label>House #3 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Interest_1__c</fullName>
        <label>Interest #1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Skiing</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Tennis</fullName>
                </value>
                <value>
                    <fullName>Fly Fishing</fullName>
                </value>
                <value>
                    <fullName>Cars</fullName>
                </value>
                <value>
                    <fullName>Surfing</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_2__c</fullName>
        <label>Interest #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Skiing</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Tennis</fullName>
                </value>
                <value>
                    <fullName>Fly Fishing</fullName>
                </value>
                <value>
                    <fullName>Cars</fullName>
                </value>
                <value>
                    <fullName>Surfing</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_3__c</fullName>
        <label>Interest #3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Skiing</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Tennis</fullName>
                </value>
                <value>
                    <fullName>Fly Fishing</fullName>
                </value>
                <value>
                    <fullName>Cars</fullName>
                </value>
                <value>
                    <fullName>Surfing</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kid_1_Birthday__c</fullName>
        <label>Kid #1 Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kid_1_Interest_1__c</fullName>
        <label>Kid #1 Interest 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kid_1_Interest__c</fullName>
        <label>Kid #1 Interest 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kid_1_Name__c</fullName>
        <label>Kid #1 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kid_1_Sex__c</fullName>
        <label>Kid #1 Sex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kid_2_Name__c</fullName>
        <label>Kid #2 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kid_2_Sex__c</fullName>
        <label>Kid #2 Sex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_Insurance_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Life Insurance Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Life Insurance Agent For</relationshipLabel>
        <relationshipName>LifeInsuranceAgent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Provider__c</fullName>
        <label>Life Insurance Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Remarried</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Net_Worth__c</fullName>
        <label>Net Worth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;5mm</fullName>
                </value>
                <value>
                    <fullName>5-10mm</fullName>
                </value>
                <value>
                    <fullName>10-25mm</fullName>
                </value>
                <value>
                    <fullName>25-50mm</fullName>
                </value>
                <value>
                    <fullName>50-100mm</fullName>
                </value>
                <value>
                    <fullName>100-250mm</fullName>
                </value>
                <value>
                    <fullName>250-500mm</fullName>
                </value>
                <value>
                    <fullName>500mm+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone #2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Home__c</fullName>
        <label>Primary Home #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Publicly_Traded_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publicly Traded Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Muslim</fullName>
                </value>
                <value>
                    <fullName>Buddhist</fullName>
                </value>
                <value>
                    <fullName>Hindu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Season_Tickets_1__c</fullName>
        <label>Season Tickets #1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Season_Tickets_2__c</fullName>
        <label>Season Tickets #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Season_Tickets_3__c</fullName>
        <label>Season Tickets #3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Attorney</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Secondary Attorney For</relationshipLabel>
        <relationshipName>SecondaryAttorney</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Smart_Phone__c</fullName>
        <label>Smart Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>iPhone</fullName>
                </value>
                <value>
                    <fullName>Blackberry</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Bio__c</fullName>
        <label>Spouse Bio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spouse_Birthday__c</fullName>
        <label>Spouse Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spouse_Charity__c</fullName>
        <label>Spouse Charity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Company_Address__c</fullName>
        <label>Spouse Company Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Company_City__c</fullName>
        <label>Spouse Company City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Company_Name__c</fullName>
        <label>Spouse Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Company_State__c</fullName>
        <label>Spouse Company State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Company_Title__c</fullName>
        <label>Spouse Company Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Company_Zip_Code__c</fullName>
        <label>Spouse Company Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Email_1__c</fullName>
        <label>Spouse Email #1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Spouse_Email_2__c</fullName>
        <label>Spouse Email #2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Spouse_Facebook__c</fullName>
        <label>Spouse Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Spouse_First_Name__c</fullName>
        <label>Spouse First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Graduate__c</fullName>
        <label>Spouse Graduate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Interest_1__c</fullName>
        <label>Spouse Interest #1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Skiing</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Tennis</fullName>
                </value>
                <value>
                    <fullName>Fly Fishing</fullName>
                </value>
                <value>
                    <fullName>Cars</fullName>
                </value>
                <value>
                    <fullName>Surfing</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Interest_2__c</fullName>
        <label>Spouse Interest #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Skiing</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Tennis</fullName>
                </value>
                <value>
                    <fullName>Fly Fishing</fullName>
                </value>
                <value>
                    <fullName>Cars</fullName>
                </value>
                <value>
                    <fullName>Surfing</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Last_Name__c</fullName>
        <label>Spouse Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Mobile__c</fullName>
        <label>Spouse Mobile #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Spouse_Personal_Website__c</fullName>
        <label>Spouse Personal Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Spouse_Smart_Phone__c</fullName>
        <label>Spouse Smart Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>iPhone</fullName>
                </value>
                <value>
                    <fullName>Blackberry</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Table__c</fullName>
        <label>Spouse Tablet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>iPad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Twitter__c</fullName>
        <label>Spouse Twitter</label>
        <type>Url</type>
    </fields>
</CustomObject>